<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/frameLayout_background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.users.LoginFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/round_shape"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/dark_surfaceTint"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/loginUsername"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:autofillHints="username"
                android:background="@drawable/round_shape"
                android:drawableStart="@drawable/baseline_person"
                android:drawablePadding="8dp"
                android:hint="@string/prompt_username"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/textColor" />

            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:autofillHints="password"
                android:background="@drawable/round_shape"
                android:drawableStart="@drawable/baseline_lock_person"
                android:drawablePadding="8dp"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/textColor" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/light_primary"
                android:text="@string/connect"
                android:textSize="18sp"
                app:cornerRadius="20dp" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</FrameLayout>